--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,8 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
+    id 'distribution'
+    id 'org.openjfx.javafxplugin' version '0.0.10'
 }
 
 repositories {
@@ -27,4 +29,10 @@ dependencies {
 application {
     // Define the main class for the application.
     mainClass = 'sudoku.App'
+}
+
+javafx {
+    version = "16.0.2"
+    modules = [ 'javafx.controls','javafx.fxml' ]
+    //.controls buat button, fxml buat ngedeklarasiin UI atau css
 }
